chore: add inert

--- a/src/patternfly/components/Compass/compass-footer.hbs
+++ b/src/patternfly/components/Compass/compass-footer.hbs
@@ -5,6 +5,9 @@
   {{setModifiers
     compass-footer--modifier=compass-footer--modifier
   }}"
+  {{#if compass-footer--IsCollapsed}}
+    inert
+  {{/if}}
   {{#if compass-footer--attribute}}
     {{{compass-footer--attribute}}}
   {{/if}}>
