--- a/src/patternfly/components/Compass/compass-header.hbs
+++ b/src/patternfly/components/Compass/compass-header.hbs
@@ -5,6 +5,9 @@
   {{setModifiers
     compass-header--modifier=compass-header--modifier
   }}"
+  {{#if compass-header--IsCollapsed}}
+    inert
+  {{/if}}
   {{#if compass-header--attribute}}
     {{{compass-header--attribute}}}
   {{/if}}>
