chore: rename class

--- a/src/patternfly/components/Compass/compass.hbs
+++ b/src/patternfly/components/Compass/compass.hbs
@@ -1,6 +1,6 @@
 <div class="{{pfv}}compass
   {{#unless compass--NoSmoothAnimate}}
-    pf-m-animate-smooth
+    pf-m-animate-smoothly
   {{/unless}}
   {{setModifiers
     compass--IsStart='pf-m-start'
