--- a/src/patternfly/layouts/Gallery/examples/Gallery.css
+++ b/src/patternfly/layouts/Gallery/examples/Gallery.css
@@ -1,5 +1,5 @@
-.ws-core-l-gallery .pf-v6-l-gallery,
-.ws-core-l-gallery .pf-v6-l-gallery__item {
+.ws-core-f-gallery .pf-v6-l-gallery,
+.ws-core-f-gallery .pf-v6-l-gallery__item {
   padding: var(--pf-t--global--spacer--sm);
   border: var(--pf-t--global--border--width--box--default) dashed var(--pf-t--global--border--color--default);
 }
