--- a/src/patternfly/layouts/Grid/examples/Grid.css
+++ b/src/patternfly/layouts/Grid/examples/Grid.css
@@ -1,4 +1,4 @@
-.ws-core-l-grid .pf-v6-l-grid__item {
+.ws-core-f-grid .pf-v6-l-grid__item {
   padding: var(--pf-t--global--spacer--sm);
   border: var(--pf-t--global--border--width--box--default) dashed var(--pf-t--global--border--color--default);
 }
