chore: round compass profile menu

--- a/src/patternfly/demos/Compass/compass--card-view.hbs
+++ b/src/patternfly/demos/Compass/compass--card-view.hbs
@@ -35,7 +35,7 @@
         {{/compass-panel}}
       {{/compass-nav}}
       {{#> compass-profile}}
-        {{#> menu-toggle menu-toggle--IsPlain="true" menu-toggle--IsText="true"}}
+        {{#> menu-toggle menu-toggle--IsPlain=true menu-toggle--IsText=true menu-toggle--IsCircle=true}}
           {{#> menu-toggle-icon}}
             {{> avatar avatar--modifier="pf-m-md"}}
           {{/menu-toggle-icon}}
