fix(expandable-section): fix nested bug

--- a/src/patternfly/components/ExpandableSection/expandable-section.scss
+++ b/src/patternfly/components/ExpandableSection/expandable-section.scss
@@ -24,6 +24,9 @@
   --#{$expandable-section}__content--Opacity: 0;
   --#{$expandable-section}__content--TranslateY: 0;
   --#{$expandable-section}__content--PaddingInlineStart: 0;
+  --#{$expandable-section}__content--MaxHeight: 0px;
+  --#{$expandable-section}__content--Visibility: hidden;
+  --#{$expandable-section}__content--Opacity: 0;
   --#{$expandable-section}--m-expand-top__content--TranslateY: 0;
   --#{$expandable-section}--m-expand-bottom__content--TranslateY: 0;
   --#{$expandable-section}--m-expanded__content--Opacity: 1;
