--- a/src/patternfly/components/Toolbar/toolbar.scss
+++ b/src/patternfly/components/Toolbar/toolbar.scss
@@ -198,8 +198,7 @@ $pf-v6--include-toolbar-breakpoints: true !default;
 
   // Container query support (opt-in)
   // Establishes container context for all container modifiers
-  &.pf-m-container,
-  &[class*="pf-m-container-"] {
+  &[class*="pf-m-container"] {
     container-type: inline-size;
     container-name: toolbar;
   }
@@ -334,7 +333,6 @@ $pf-v6--include-toolbar-breakpoints: true !default;
       padding: 0;
       border-block-end: 0;
       box-shadow: none;
-      background-color: lightblue !important;
     }
   }
 
@@ -345,61 +343,23 @@ $pf-v6--include-toolbar-breakpoints: true !default;
       padding: 0;
       border-block-end: 0;
       box-shadow: none;
-      background-color: lavender !important;
     }
   }
 
   // Container query behavior with explicit breakpoint modifiers
-  @at-root .#{$toolbar}.pf-m-container-sm & {
-    @include pf-v6-container-query("sm", "toolbar") {
-      position: static;
-      padding: 0;
-      border-block-end: 0;
-      box-shadow: none;
-      background-color: lightgreen !important;
+  @each $breakpoint, $breakpoint-value in $pf-v6-c-toolbar--breakpoint-map {
+    @if $breakpoint != "base" {
+      @at-root .#{$toolbar}.pf-m-container-#{$breakpoint} & {
+        @include pf-v6-container-query($breakpoint, "toolbar") {
+          position: static;
+          padding: 0;
+          border-block-end: 0;
+          box-shadow: none;
+        }
+      }
     }
   }
-
-  @at-root .#{$toolbar}.pf-m-container-md & {
-    @include pf-v6-container-query("md", "toolbar") {
-      position: static;
-      padding: 0;
-      border-block-end: 0;
-      box-shadow: none;
-      background-color: lightcoral !important;
-    }
-  }
-
-  @at-root .#{$toolbar}.pf-m-container-lg & {
-    @include pf-v6-container-query("lg", "toolbar") {
-      position: static;
-      padding: 0;
-      border-block-end: 0;
-      box-shadow: none;
-      background-color: yellow !important;
-    }
-  }
-
-  @at-root .#{$toolbar}.pf-m-container-xl & {
-    @include pf-v6-container-query("xl", "toolbar") {
-      position: static;
-      padding: 0;
-      border-block-end: 0;
-      box-shadow: none;
-      background-color: violet !important;
-    }
-  }
-
-  @at-root .#{$toolbar}.pf-m-container-2xl & {
-    @include pf-v6-container-query("2xl", "toolbar") {
-      position: static;
-      padding: 0;
-      border-block-end: 0;
-      box-shadow: none;
-      background-color: orange !important;
-    }
-  }
-//stylelint-enable 
+// stylelint-enable 
 
   &.pf-m-expanded,
   .#{$toolbar}__group {
@@ -438,6 +398,36 @@ $pf-v6--include-toolbar-breakpoints: true !default;
   }
 }
 
+// Mixin for toggle group show/hide behavior
+@mixin toolbar-toggle-group-breakpoint-behavior($breakpoint-name) {
+  .#{$toolbar}__group:where(.pf-m-toggle-group) {
+    &.pf-m-show#{$breakpoint-name} {
+      .#{$toolbar}__group,
+      .#{$toolbar}__item {
+        display: flex;
+        flex: 0 1 auto;
+      }
+
+      .#{$toolbar}__toggle {
+        display: none;
+      }
+    }
+
+    &, // default value
+    &.pf-m-hide#{$breakpoint-name} {
+      .#{$toolbar}__group,
+      .#{$toolbar}__item {
+        display: none;
+      }
+
+      .#{$toolbar}__toggle {
+        display: inline-flex;
+      }
+    }
+  }
+}
+
+// Media queries (default behavior)
 @each $breakpoint, $breakpoint-value in $pf-v6-c-toolbar--breakpoint-map {
   $breakpoint-name: if($breakpoint != "base", -on-#{$breakpoint}, "");
 
@@ -514,29 +504,48 @@ $pf-v6--include-toolbar-breakpoints: true !default;
       }
     }
 
-    // - Toolbar toggle group
-    .#{$toolbar}__group:where(.pf-m-toggle-group) {
-      &.pf-m-show#{$breakpoint-name} {
-        .#{$toolbar}__group,
-        .#{$toolbar}__item {
-          display: flex;
-          flex: 0 1 auto;
-        }
+    // - Toolbar toggle group (only for non-container toolbars)
+    @at-root .#{$toolbar}:not([class*="pf-m-container"]) {
+      @include toolbar-toggle-group-breakpoint-behavior($breakpoint-name);
+    }
+  }
+}
 
-        .#{$toolbar}__toggle {
-          display: none;
-        }
-      }
+// Container queries (opt-in behavior)
+// Set base/default state for container-query toolbars (hide filters, show toggle)
+.#{$toolbar}[class*="pf-m-container"] {
+  .#{$toolbar}__group:where(.pf-m-toggle-group) {
+    .#{$toolbar}__group,
+    .#{$toolbar}__item {
+      display: none;
+    }
 
-      &, // default value
-      &.pf-m-hide#{$breakpoint-name} {
-        .#{$toolbar}__group,
-        .#{$toolbar}__item {
-          display: none;
-        }
+    .#{$toolbar}__toggle {
+      display: inline-flex;
+    }
+  }
+}
 
-        .#{$toolbar}__toggle {
-          display: inline-flex;
+// Container query responsive behavior
+.#{$toolbar}__group:where(.pf-m-toggle-group) {
+  @each $breakpoint, $breakpoint-value in $pf-v6-c-toolbar--breakpoint-map {
+    @if $breakpoint != "base" {
+      $breakpoint-name: -on-#{$breakpoint};
+
+      @at-root .#{$toolbar}.pf-m-container &,
+      .#{$toolbar}.pf-m-container-#{$breakpoint} & {
+        @include pf-v6-container-query($breakpoint, "toolbar") {
+          &.pf-m-show#{$breakpoint-name} {
+            .#{$toolbar}__group,
+            .#{$toolbar}__item {
+              display: flex;
+              flex: 0 1 auto;
+            }
+
+            .#{$toolbar}__toggle {
+              display: none;
+            }
+          }
         }
       }
     }
