chore: mc example, fix example styles

--- a/src/patternfly/components/Compass/examples/Compass.css
+++ b/src/patternfly/components/Compass/examples/Compass.css
@@ -1,8 +1,10 @@
-#ws-core-a-compass-basic [class*="pf-v6-c-compass"] {
+#ws-core-a-compass-default [class*="pf-v6-c-compass"],
+#ws-core-a-compass-max-canvas [class*="pf-v6-c-compass"] {
   position: relative;
 }
 
-#ws-core-a-compass-basic [class*="pf-v6-c-compass"]::after {
+#ws-core-a-compass-default [class*="pf-v6-c-compass"]::after,
+#ws-core-a-compass-max-canvas [class*="pf-v6-c-compass"]::after {
   position: absolute;
   inset: 0;
   pointer-events: none;
