chore: yarn lint

--- a/src/patternfly/components/Toolbar/toolbar.scss
+++ b/src/patternfly/components/Toolbar/toolbar.scss
@@ -202,18 +202,6 @@ $pf-v6--include-toolbar-breakpoints: true !default;
       flex-direction: column;
       align-items: center;
     }
-
-    .#{$toolbar}__group {
-      row-gap: var(--#{$toolbar}__group--m-vertical--RowGap);
-    }
-
-    .#{$toolbar}__item {
-      row-gap: var(--#{$toolbar}__item--m-vertical--RowGap);
-    }
-
-    .#{$toolbar}__content-section {
-      row-gap: var(--#{$toolbar}__content-section--m-vertical--RowGap);
-    }
   }
 }
 
@@ -226,10 +214,6 @@ $pf-v6--include-toolbar-breakpoints: true !default;
   column-gap: var(--#{$toolbar}__item--ColumnGap);
   width: var(--#{$toolbar}__item--Width--base);
   min-width: var(--#{$toolbar}__item--MinWidth--base);
-
-  .#{$toolbar}.pf-m-vertical & {
-    row-gap: var(--#{$toolbar}__item--ColumnGap);
-  }
 
   // - Toolbar expand
   &.pf-m-expand-all.pf-m-expanded {
@@ -259,6 +243,10 @@ $pf-v6--include-toolbar-breakpoints: true !default;
 .#{$toolbar}__group {
   row-gap: var(--#{$toolbar}__group--RowGap);
   column-gap: var(--#{$toolbar}__group--ColumnGap);
+
+  .#{$toolbar}.pf-m-vertical & {
+    row-gap: var(--#{$toolbar}__group--ColumnGapp);
+  }
 
   // - Toolbar filter group
   &.pf-m-filter-group {
