--- a/src/patternfly/components/Masthead/masthead.scss
+++ b/src/patternfly/components/Masthead/masthead.scss
@@ -127,6 +127,7 @@ $pf-v6-c-masthead--inset-map: build-spacer-map("none", "sm", "md", "lg", "xl", "
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: fit-content;
     height: 100%;
     border-inline-end: var(--#{$masthead}--m-docked--BorderInlineEndWidth) solid var(--#{$masthead}--m-docked--BorderInlineEndColor);
 
