feat(toolbar): add container query option

--- a/src/patternfly/components/Toolbar/examples/Toolbar.css
+++ b/src/patternfly/components/Toolbar/examples/Toolbar.css
@@ -79,3 +79,19 @@
   height: 200px;
   overflow: auto;
 }
+
+.ws-core-resizeable-container {
+  resize: horizontal;
+  overflow: auto;
+  border: var(--pf-t--global--border--width--extra-strong) dashed var(--pf-t--global--border--color--default);
+  width: 800px;
+  min-width: 300px;
+  max-width: 100%;
+}
+
+#ws-core-spacer-container {
+  flex-shrink: 0;
+  width: 290px;
+  padding: var(--pf-t--global--spacer--md);
+  border: var(--pf-t--global--border--width--regular) dotted var(--pf-t--global--border--color--default);
+}
