fix: fixes for react docked nav (#8029)

--- a/src/patternfly/components/Nav/nav.scss
+++ b/src/patternfly/components/Nav/nav.scss
@@ -204,6 +204,11 @@
       position: relative;
       align-self: center;
       min-width: 1lh;
+      text-align: center;
+    }
+
+    .#{$nav}__link-text {
+      display: none;
     }
   }
 
