feat(table): add support for tfoot

--- a/src/patternfly/components/Table/examples/Table.css
+++ b/src/patternfly/components/Table/examples/Table.css
@@ -11,7 +11,8 @@
 
 #ws-core-c-table-sticky-columns-and-header .ws-preview-html,
 #ws-core-c-table-nested-column-headers-sticky-header .ws-preview-html,
-#ws-core-c-table-sticky-header .ws-preview-html {
+#ws-core-c-table-sticky-header .ws-preview-html,
+#ws-core-c-table-sticky-footer .ws-preview-html {
   height: 400px;
 }
 
