--- a/src/patternfly/components/Table/table.hbs
+++ b/src/patternfly/components/Table/table.hbs
@@ -6,6 +6,9 @@
     table--HasNoPosinset='pf-m-no-inset'
     table--IsCompact='pf-m-compact'
     table--IsAnimateExpand='pf-m-animate-expand'
+    table--IsPlain='pf-m-plain'
+    table--HasStickyHeader='pf-m-sticky-header'
+    table--HasStickyFooter='pf-m-sticky-footer'
     table--modifier=table--modifier
   }}"
   {{#if table--IsGrid}}
