--- a/src/patternfly/sass-utilities/mixins.scss
+++ b/src/patternfly/sass-utilities/mixins.scss
@@ -2,6 +2,8 @@
 @use '../sass-utilities/init' as *;
 @use '../sass-utilities/scss-variables' as *;
 @use '../sass-utilities/namespaces-components' as *;
+@use 'sass:list';
+@use 'sass:meta';
 
 // Media query used to create responsive classes
 @mixin pf-v6-media-query($point) {
@@ -85,10 +87,10 @@
   // if $class-name is a map
 
   // stylelint-disable
-  @if type-of($props) == map {
+  @if meta.type-of($props) == map {
     @each $class, $val in $props {
-      $property: nth($val, 1);
-      $value: #{nth($val, 2)} !important;
+      $property: list.nth($val, 1);
+      $value: #{list.nth($val, 2)} !important;
 
       .#{$pf-prefix}u-#{$class} {
         #{$property}: #{$value};
@@ -103,8 +105,8 @@
         @if $direction == 'height' {
           @include pf-v6-height-media-query($breakpoint) {
             @each $class, $val in $props {
-              $property: nth($val, 1);
-              $value: #{nth($val, 2)} !important;
+              $property: list.nth($val, 1);
+              $value: #{list.nth($val, 2)} !important;
 
               .#{$pf-prefix}u-#{$class}#{$suffix}-height {
                 #{$property}: #{$value};
@@ -115,8 +117,8 @@
         @else if ($direction == 'width') {
           @include pf-v6-media-query($breakpoint) {
             @each $class, $val in $props {
-              $property: nth($val, 1);
-              $value: #{nth($val, 2)} !important;
+              $property: list.nth($val, 1);
+              $value: #{list.nth($val, 2)} !important;
 
               .#{$pf-prefix}u-#{$class}#{$suffix} {
                 #{$property}: #{$value};
@@ -127,10 +129,10 @@
       }
     }
   }
-  @else if type-of($props) == list {
-    $class: nth($props, 1);
-    $property: nth($props, 2);
-    $value: nth($props, 3) !important;
+  @else if meta.type-of($props) == list {
+    $class: list.nth($props, 1);
+    $property: list.nth($props, 2);
+    $value: list.nth($props, 3) !important;
 
     .#{$pf-prefix}u-#{$class} {
       #{$property}: #{$value};
@@ -305,14 +307,14 @@
 
     // Build variable list
     @if $breakpoint != "base" {
-      $list: append($list, $css-var + "-on-" + $breakpoint);
+      $list: list.append($list, $css-var + "-on-" + $breakpoint);
     } @else {
-      $list: append($list, $css-var);
+      $list: list.append($list, $css-var);
     }
 
     // Construct variable stack
     @each $list-item in $list {
-      @if length($variable-list) == 0 {
+      @if list.length($variable-list) == 0 {
         $variable-list: var(#{$list-item});
       } @else {
         $variable-list: var(#{$list-item}, $variable-list);
@@ -340,7 +342,7 @@
     // Build variable list
     // stylelint-disable scss/at-if-no-null
     @if $breakpoint-value {
-      $list: append($list, $css-var + "-on-" + $breakpoint);
+      $list: list.append($list, $css-var + "-on-" + $breakpoint);
     }
     // stylelint-enable
   }
@@ -391,7 +393,11 @@
 //   background: red;
 // }
 @mixin pf-v6-rtl($hasWhere: true) {
-  $sel: if($hasWhere,':where',':is');
+  $sel: ':is';
+
+  @if $hasWhere {
+    $sel: ':where';
+  }
 
   @at-root #{$sel}(.#{$pf-prefix}m-dir-rtl, [dir="rtl"]) #{&} {
     @content;
@@ -400,7 +406,11 @@
 
 // Used to create the LTR selector for LTR specific styles
 @mixin pf-v6-ltr($hasWhere: true) {
-  $sel: if($hasWhere,':where',':is');
+  $sel: ':is';
+
+  @if $hasWhere {
+    $sel: ':where';
+  }
 
   @at-root #{$sel}(.#{$pf-prefix}m-dir-ltr, [dir="ltr"]) #{&} {
     @content;
@@ -439,11 +449,17 @@
 
 // Declares a global inverse multiplier var used for returning the inverse of a number. Defined within blocks that reference the global var in calc() functions to conditionally return the default or inverse value of a number.
 @mixin pf-v6-set-inverse($val: true) {
-  --#{$pf-global}--inverse--multiplier: #{if($val, -1, 1)};
+  @if $val {
+    --#{$pf-global}--inverse--multiplier: -1;
+  } @else {
+    --#{$pf-global}--inverse--multiplier: 1;
+  }
 }
 
 @mixin pf-root($selector, $isClass: true) {
-  $selector: if($isClass, "." + $selector, $selector);
+  @if $isClass {
+    $selector: "." + $selector;
+  }
   #{$selector} {
     @content
   }
